--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -196,7 +196,7 @@ block main
             span.carousel-control-next-icon(aria-hidden='true')
             span.visually-hidden Next
 
-    // Some more sponsor information
+    // -- Some more sponsor information
     .text-center
         #sponsorStuff.p.insides.my-4
             | Want to sponsor?&nbsp
@@ -212,6 +212,8 @@ block main
         a.prospectus.text-decoration-none(href='sponsor') Learn more!
         hr
 
+    // -- Team Members
+        // TODO: add github/linkedin
     .mt-3.text-center
         h1 The Team
         .d-flex.justify-content-around
