--- a/src/public/stylesheets/welcome_page.css
+++ b/src/public/stylesheets/welcome_page.css
@@ -50,6 +50,13 @@
     animation: dash 20s linear infinite;
     stroke: #3f6087;
 }
+@keyframes dash {
+    from {
+        stroke-dashoffset: 1000;
+    }
+    to {
+        stroke-dashoffset: 0;
+    }
 
 /* ------First Section------ */
 .intro {
