--- a/src/views/gallery.pug
+++ b/src/views/gallery.pug
@@ -5,7 +5,7 @@ block append styles
 
 block main
 
-    h1.ycpHeader.my-3.display-4.insides Image Gallery
+    h1.ycpHeader.my-3.display-4.backgroundBlend Image Gallery
     .d-flex.justify-content-center
         .container.m-0
             .row.m-0
