--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -1,6 +1,6 @@
 link(rel='stylesheet', href='/static/stylesheets/footer.css')
 
-footer.text-center.mt-3.text-light.py-3.insides(role='contentinfo')
+footer.text-center.mt-3.text-light.py-3.backgroundBlend(role='contentinfo')
     a.link-light(href='http://mlh.io/code-of-conduct') MLH Code of Conduct
     | &nbsp|&nbsp
     a.link-light(href='https://ycphacks.io/YCP_HACKS_SPONOSRSHIP_BROCHURE_2022_FINAL_FILE.pdf') Sponsor Us
