--- a/src/views/judging_criteria.pug
+++ b/src/views/judging_criteria.pug
@@ -8,7 +8,7 @@ block main
         .col-md-6
             h1.d-flex.justify-content-center.ycpHeader.p-3 Judging Criteria
             hr
-            .d-flex.justify-content-around.flex-column.text-center.insides
+            .d-flex.justify-content-around.flex-column.text-center.backgroundBlend
                 //p Engineering skills, demonstrated quality code, etc.
                 .hacks Design
                 p Attention to aesthetics, interaction, and UI
@@ -21,7 +21,7 @@ block main
         .col-md-6
             h1.d-flex.justify-content-center.ycpHeader.p-3 Hack Categories
             hr
-            .d-flex.justify-content-around.flex-column.text-center.insides
+            .d-flex.justify-content-around.flex-column.text-center.backgroundBlend
                 .display-6.hacks Best of show
                 .display-6.hacks YCP Hack
                 .display-6.hacks Gaming Hack
