--- a/src/views/past_events.pug
+++ b/src/views/past_events.pug
@@ -5,7 +5,7 @@ block append styles
 
 block main
     .container
-        h1.ycpHeader.my-3.insides get inspired by past projects!
+        h1.ycpHeader.my-3.backgroundBlend get inspired by past projects!
         .d-flex.justify-content-center
             .row.row-cols-md-3.col-md-1.g-4
 
@@ -24,10 +24,10 @@ block main
                 +card('/static/images/devpost/super-hack.png','...','https://devpost.com/software/game-super-hack-quest-working-title')
                 +card('/static/images/devpost/hows-it-growing.png','...','https://devpost.com/software/plantcare-cdxhoa')
 
-        a.link.text-decoration-none.text-white.insides(href='https://ycp-hacks-2022.devpost.com/project-gallery') see more!
+        a.link.text-decoration-none.text-white.backgroundBlend(href='https://ycp-hacks-2022.devpost.com/project-gallery') see more!
         hr
 
-        h2.ycpHeader.my-3.insides past events
+        h2.ycpHeader.my-3.backgroundBlend past events
         .d-flex.justify-content-center
             mixin table(events)
                 tr
@@ -43,7 +43,7 @@ block main
 
         hr
 
-        h2.ycpHeader.my-3.insides past prizes
+        h2.ycpHeader.my-3.backgroundBlend past prizes
         .d-flex.justify-content-center
             table.table.table-success.table-striped.table-bordered
                 tr
