--- a/src/views/sponsor.pug
+++ b/src/views/sponsor.pug
@@ -81,7 +81,7 @@ block main
                             a.link.text-decoration-none(href='https://csdavidson.com/') Read more
     .hacks.mt-5
     .d-flex.justify-content-center
-        .bottom.text-center.insides
+        .bottom.text-center.backgroundBlend
             .display-5.text-white Want to sponsor?
             .d-flex.flex-column.my-2
                 a.fa-solid.fa-envelope.text-decoration-none.link-light(href='mailto:INFO@YCPHacks.io')
