--- a/src/public/stylesheets/welcome_page.css
+++ b/src/public/stylesheets/welcome_page.css
@@ -197,7 +197,7 @@
     justify-content: space-between;
 }
 
-.carousel-item-container .dixie {
+.carousel-item-container .sponsorContainer {
     justify-content: center;
     align-items: center;
     display: flex;
@@ -219,7 +219,6 @@
 
 .sponsorImage:hover {
     transform: scale(1.2);
-    /*transition: 0.6s;*/
 }
 
 
