--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -13,4 +13,4 @@ html
         link(rel='stylesheet', href='/static/stylesheets/404.css')
     body
         block content
-            .hehe.centered default
+            .centered default
