--- a/src/views/apply.pug
+++ b/src/views/apply.pug
@@ -197,16 +197,10 @@ block main
                             label.form-check-label(for='defaultCheck14')
                                 | My school does not offer majors / primary areas of study
                         .form-check
-                            input#defaultCheck12.form-check-input(type='checkbox', value='Other (please specify)', name='major')
-                            label.form-check-label(for='defaultCheck12')
-                                | Other (please specify)
-
-
                             label
                                 input#other(type='checkbox', name='interest', value='other')
-                                |             Other (please specify)
+                                |             Other
                             input#otherValue(type='text', name='other', aria-label='Other interest')
-
 
                         .form-check
                             input#defaultCheck15.form-check-input(type='checkbox', value='Prefer not to answer', name='major', checked)
